<resources>
    <string name="app_name">ProjectUAS_TimXD_HealthyCare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_energy_intake">Daily Energy Intake:</string>
    <string name="_0_cal">0 cal</string>
    <string name="add_an_meal">Add an meal</string>
    <string name="what_you_eat">What you eat?</string>
    <string name="callorie_approx">Callorie Approx</string>
    <string name="log_this_meal">Log this meal</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="user_profile">User Profile</string>
    <string name="update_profile">Update Profile</string>
</resources>